update obsolete paper links

--- a/posts/2014-12-29.md
+++ b/posts/2014-12-29.md
@@ -12,7 +12,7 @@ Similarly, unfinished work and progress made elsewhere in the graph is first pro
 
 ## An example
 
-To take an example we borrow an enormous figure from the [Naiad paper](http://research.microsoft.com/pubs/201100/naiad_sosp2013.pdf).
+To take an example we borrow an enormous figure from the [Naiad paper](https://www.microsoft.com/en-us/research/wp-content/uploads/2013/11/naiad_sosp2013.pdf).
 
 ![My helpful screenshot](https://github.com/frankmcsherry/blog/blob/master/assets/Pointstamps.png)
 
