--- a/posts/2015-05-12.md
+++ b/posts/2015-05-12.md
@@ -14,7 +14,7 @@ Let's see what happens if you build on something better, using just `join` and `
 
 ## Differential dataflow
 
-[Differential dataflow](http://www.cidrdb.org/cidr2013/Papers/CIDR13_Paper111.pdf) is a way of implementing data-parallel dataflow computations so that work is done only in response to changes in the data. If you change one input to your computation, you would prefer not to re-evaluate the entire computation. Rather, changes to the input produces some changes in the output of your first dataflow operator, which are then changes to the inputs of subsequent operators. Eventually these changes either evaporate or spill out the end of your dataflow as changed outputs.
+[Differential dataflow](http://cidrdb.org/cidr2013/Papers/CIDR13_Paper111.pdf) is a way of implementing data-parallel dataflow computations so that work is done only in response to changes in the data. If you change one input to your computation, you would prefer not to re-evaluate the entire computation. Rather, changes to the input produces some changes in the output of your first dataflow operator, which are then changes to the inputs of subsequent operators. Eventually these changes either evaporate or spill out the end of your dataflow as changed outputs.
 
 Chasing these changes and doing *only* this work is what differential dataflow does well.
 
