--- a/posts/2015-09-29.md
+++ b/posts/2015-09-29.md
@@ -4,7 +4,7 @@ We are going to take a bit of a break from writing raw [timely dataflow in Rust]
 
 ---
 
-I should start by saying that differential dataflow isn't brand new. [We did this a few years back](http://www.cidrdb.org/cidr2013/Papers/CIDR13_Paper111.pdf), and [it already exists on top of Naiad](https://github.com/TimelyDataflow/Naiad/tree/release_0.5/Frameworks/DifferentialDataflow). But, it turns out it could be done a lot better in Rust, and since it seems like everyone is still working with lower-tech stuff, it seemed worth revisiting and improving.
+I should start by saying that differential dataflow isn't brand new. [We did this a few years back](http://cidrdb.org/cidr2013/Papers/CIDR13_Paper111.pdf), and [it already exists on top of Naiad](https://github.com/TimelyDataflow/Naiad/tree/release_0.5/Frameworks/DifferentialDataflow). But, it turns out it could be done a lot better in Rust, and since it seems like everyone is still working with lower-tech stuff, it seemed worth revisiting and improving.
 
 ---
 
