I think you actually a word

--- a/posts/2015-12-19.md
+++ b/posts/2015-12-19.md
@@ -61,7 +61,7 @@ But, this train ain't stopping at DAG-town.
 
 ### TOOOOOOT!!!
 
-Yeah actually, our dataflow actually graphs kinda look more like this (actual SCC computation):
+Yeah actually, our dataflow graphs actually kinda look more like this (actual SCC computation):
 
 ![hypothetical dataflow](https://github.com/frankmcsherry/blog/blob/master/assets/progress/scc-dataflow.png)
 
