--- a/posts/2015-12-19.md
+++ b/posts/2015-12-19.md
@@ -277,7 +277,7 @@ One of the most appealing characteristics of this protocol is that it is totally
 
 A slightly lazy worker `D` who doesn't receive any messages can just receive the three progress updates and confirm that they cancel out and that it shouldn't expect anything more; it doesn't need to actively participate unless it does some work. Workers `A`, `B`, and `C` don't have to wait on `D`, who can be asleep if it really wants (or maybe working on something else). Nor do the worker explicitly syncronize; they can't fire notifications until they learn that work is done, but they can work on whatever else they like in the meantime.
 
-The downside of the protocol is the broadcasting. In Naiad we started with a very simple version of the protocol, and found that there were *lots* of progress updates being sent around. We introduced several optimizations in the paper, including hierarchical aggregation and some clever buffering. The Rust codebase doesn't seem to suffer from this as much, possibly due to the abstraction boundaries suppressing spurious changes, the it hasn't been exercised at the same scale, either.
+The downside of the protocol is the broadcasting. In Naiad we started with a very simple version of the protocol, and found that there were *lots* of progress updates being sent around. We introduced several optimizations in the paper, including hierarchical aggregation and some clever buffering. The Rust codebase doesn't seem to suffer from this as much, possibly due to the abstraction boundaries suppressing spurious changes, it hasn't been exercised at the same scale, either.
 
 ## Conclusions
 
