Fixed small syntax issues

--- a/posts/2018-05-19.md
+++ b/posts/2018-05-19.md
@@ -66,7 +66,7 @@ In the interest of completeness, we will have one more method for the `Relation`
 impl<Tuple: Ord> Relation<Tuple> {
     /// Merges two relations into their union.
     pub fn merge(self, other: Self) -> Self {
-        let mut elements = Vec::with_capacity(elements1.len() + elements2.len());
+        let mut elements = Vec::with_capacity(self.elements.len() + other.elements.len());
         elements.extend(self.elements.into_iter());
         elements.extend(other.elements.into_iter());
         elements.into()
@@ -89,7 +89,7 @@ pub struct Variable<Tuple: Ord> {
     /// A list of already processed tuples.
     stable: Vec<Relation<Tuple>>,
     /// A list of recently added but unprocessed tuples.
-    recent: Relation<Tuple>>,
+    recent: Relation<Tuple>,
     /// A list of tuples yet to be introduced.
     to_add: Vec<Relation<Tuple>>,
 }
@@ -149,7 +149,7 @@ To march through the relations, we will recast them as "slices", which is how Ru
 ```rust
     // represent the relations as slices.
     let mut slice1 = &input1.elements[..];
-    let mut slice2 = &input2.elements[..]
+    let mut slice2 = &input2.elements[..];
 
     while !slice1.is_empty() && !slice2.is_empty() {
 
