added cluster measurements

--- a/posts/2017-09-23.md
+++ b/posts/2017-09-23.md
@@ -32,6 +32,8 @@ The conclusions are varying levels of violent depending on the paper. The laptop
 
 Our first paper is [Scalable Distributed Subgraph Enumeration](http://www.vldb.org/pvldb/vol10/p217-lai.pdf) or "SEED". We will have a future post about rules for picking acronyms.
 
+**2018-08-27 Update**: I have added measurements for naive distribution using timely dataflow on a cluster, to test the hypothesis that these computations could distributed well naively. These are the "cluster" lines in each of the tables. The code can be found in [this repository](https://github.com/frankmcsherry/dataflow-join/tree/master/naive). Perhaps importantly, the graph data are pre-distributed to each of the machines.
+
 Subgraph enumeration is a problem in which you get presented with a large undirected "data" graph, and a smaller undirected "pattern" graph. Your goal is to find all instances of the pattern graph in the data graph, where an "instance" is a mapping from pattern vertices to data vertices, for which all pattern edges exist between their corresponding data vertices.
 
 This particular paper is interested in the following seven pattern graphs:
@@ -59,6 +61,7 @@ There are two datasets for which the paper reports performance on all queries, a
 | Laptop  |  2    | 177s | 6.01s | 4.49s | 1.11s  |     - |    - | 2.25s |   63s | 8.94s |  1.93s |
 | Laptop  | 2+2   | 123s | 4.02s | 2.91s | 0.76s  |     - |    - | 1.50s |   43s | 6.00s |  1.37s |
 | Laptop* | 160   | 2.31s| 249ms | 70ms  | 31ms   |     - |    - |  67ms | 5.80s | 187ms |   42ms |
+| Cluster | 160   | 5.85s| 717ms | 281ms | 252ms  |     - |    - | 331ms | 6.36s | 353ms |  241ms |
 
 Scanning through these numbers, independent of what you think about SEED I hope we can agree that `TT` was never in the running as "state of the art". The stand-out numbers are for queries `q1` and `q6`, where `SEED` is faster than a single thread (though, slower than the laptop with four threads), and queries `q4` and `q5`, where I gave up. The `*` measurements are often surprisingly small, and while I'll say more about these later, this implies that it may not be hard to compute the results, but actually enumerating all of them might be a good reason to have many computers.
 
@@ -74,6 +77,7 @@ Let's look at the LiveJournal numbers. I added a row for [EmptyHeaded](https://p
 |     Laptop  |     2 | 455s |   37s |   20s |   30s  |     - |     - |   17s |     - |  193s |   985s |
 |     Laptop  |   2+2 | 321s |   30s |   13s |   22s  |     - |     - |   11s |     - |  138s |   761s |
 |     Laptop* |   160 | 6.98s| 740ms | 314ms | 472ms  |     - |     - | 258ms |     - | 3.13s |    17s |
+|     Cluster |   160 | 8.69s| 2.15s | 933ms | 1.13s  |       |       | 1.03s |       | 4.35s |    21s |
 
 These numbers are more interesting. First, for `q1` the laptop is now never faster than the cluster. However, `SEED` is barely faster, and still much slower than a naive 160-way partitioning could be, in principle. Second, I didn't complete any `q6` measurements here, partly because the number of matches is roughly 18 trillion (it would take ~6000 seconds for one 3Ghz core just to perform 18 trillion increment ops); I did count the matches exactly though, in `q6*`. Finally, for `q7` we now have `SEED` in the running (briefly) against the laptop; there are many more 5-cliques in LiveJournal (roughly half a trillion) than in YouTube (roughly 70 million), and it makes sense that more machines might help. Other numbers are similar to the above, with the laptop often faster than `SEED`.
 
@@ -91,6 +95,7 @@ The paper also reports timing measurements on a billions-edge Friendster graph, 
 | Laptop  |     2 | 2385s | 1268s   |
 | Laptop  |   2+2 | 1587s | 820s    |
 | Laptop* |   160 | -     | -       |
+| Cluster |   160 | 82.5s | 39.5s   |
 
 These numbers are for sure more interesting. `SEED` does better than any number I can actually achieve on my laptop. That demonstrates non-triviality, in that their system isn't just a laptop computing the answer and 156 cores mining bitcoin. I would have loved to show you the 160 core measurement, but .. the graph is large enough and the 160-way work partition scattered enough that OS X decides it should page out the 15GB of data. Triangle computation saw a 5x slowdown in "160 core" mode vs one core (reporting about 1/33rd the single-threaded time), and I didn't want to wait the hypothetical ten hours it might have taken to complete `q2` and `q7` in that mode, only to get a number that is mostly measuring random reads to my SSD.
 
